# mcp-ghmodels

./: README.md  client.py  pyproject.toml
src/weather/: server.py
