[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b6",
    "httpx>=0.28.1",
    "mcp>=1.1.2",
    "python-dotenv>=1.0.1",
]

[tool.uv.workspace]
members = ["weather"]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
weather = "weather:main"
